# libosb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/libosb/: event.cc  sprite.cc
src/libosb/include/osb/: easing.hh  event.hh  line_helper.hh  osb.hh  osb_global.hh  sprite.hh  util.hh
src/osbtest/: main.cc
